fix author alignment in section results table; v 0.9.10-2

--- a/AlmaDL-journalStyleSheet.scss
+++ b/AlmaDL-journalStyleSheet.scss
@@ -14,7 +14,7 @@
 * License: Creative Commons BY 4.0
 * Author: Piero Grandesso, for AlmaDL Journals - University of Bologna
 * https://github.com/piero-g/almadl-journals-layout
-* Based on version 0.9.10-1 | Subversion n.: #{$subversion}
+* Based on version 0.9.10-2 | Subversion n.: #{$subversion}
 *
 */
 
@@ -1029,7 +1029,7 @@ table.listing tr.heading a, table.listing tr.heading a:link, table.listing tr.he
 	/* important to bypass inline style */
 	padding-left: 43% !important;
 }
-#pkp-search-titleIndex #results table.listing td[colspan="3"] {
+#pkp-search-titleIndex #results table.listing td[colspan="3"], #pkp-plugins-generic-browse-search-sectionDetails #results table.listing td[colspan="3"] {
 	/* important to bypass inline style */
 	padding-left: 28% !important;
 }
